[package]
name = "magpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
colored = "2.0.0"
linefeed = "0.6.0"
rand = "0.8.5"
magc = { path = "../magc" }
magi = { path = "../magi" }