[package]
name = "mag_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
colored = "2.0.0"
console = "0.15.0"
crossterm = "0.25.0"
dialoguer = "0.10.1"
indicatif = "0.16.2"
rand = "0.8.5"
magc = { path = "../magc" }
strontium = { path = "../strontium" }
# magi = { path = "../magi" }