[package]
name = "mag_lang"
description = "The Mag Language Runtime"
keywords = ["language", "parser", "compiler", "runtime"]
categories = ["compilers", "development-tools", "parser-implementations"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
colored = "2.0.0"
console = "0.15.0"
crossterm = "0.25.0"
dialoguer = "0.10.1"
indicatif = "0.16.2"
rand = "0.8.5"
magc = "0.1.0"
strontium = "0.6.0"